uprev to gridstack 1.0; support for added

--- a/demo/index.html
+++ b/demo/index.html
@@ -11,8 +11,8 @@
     <title>gridstack-angular demo</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <link rel="stylesheet" href="bower_components/gridstack/dist/gridstack.css"/>
-    <link rel="stylesheet" href="bower_components/gridstack/dist/gridstack-extra.css"/>
+    <link rel="stylesheet" href="lib/gridstack/dist/gridstack.css"/>
+    <link rel="stylesheet" href="lib/gridstack/dist/gridstack-extra.css"/>
 
     <style type="text/css">
         .grid1 {
@@ -52,7 +52,8 @@
     <script src="bower_components/jquery-ui/jquery-ui.js"></script>
     <script src="bower_components/lodash/dist/lodash.min.js"></script>
     <script src="bower_components/angular/angular.min.js"></script>
-    <script src="bower_components/gridstack/dist/gridstack.js"></script>
+    <script src="lib/gridstack/dist/gridstack.js"></script>
+    <script src="lib/gridstack/dist/gridstack.jQueryUI.js"></script>
     <script src="../src/gridstack.controller.js"></script>
     <script src="../src/gridstack.directive.js"></script>
     <script src="../src/gridstackitem.directive.js"></script>
