--- a/demo/two.html
+++ b/demo/two.html
@@ -53,7 +53,7 @@
                     <div gridstack-item ng-repeat="w in widgets0" class="grid-stack-item" gs-item-x="w.x" gs-item-y="w.y"
                          gs-item-width="w.width" gs-item-height="w.height" gs-item-autopos="1" on-item-added="onItemAdded(item)" on-item-removed="onItemRemoved(item)">
                             <div class="grid-stack-item-content">
-                                <a class="btn btn-primary" ng-click="removeWidget(w)" href="#">{{w.title}}</a>
+                                <a class="btn btn-primary" ng-click="removeWidget0(w)" href="#">{{w.title}}</a>
                             </div>
                     </div>
                 </div>
@@ -63,7 +63,7 @@
                     <div gridstack-item ng-repeat="w in widgets1" class="grid-stack-item" gs-item-x="w.x" gs-item-y="w.y"
                          gs-item-width="w.width" gs-item-height="w.height" gs-item-autopos="1" on-item-added="onItemAdded(item)" on-item-removed="onItemRemoved(item)">
                         <div class="grid-stack-item-content">
-                            <a class="btn btn-primary" ng-click="removeWidget(w)" href="#">{{w.title}}</a>
+                            <a class="btn btn-primary" ng-click="removeWidget0(w)" href="#">{{w.title}}</a>
                         </div>
                     </div>
                 </div>
