set item-autopos option to default to true lookup items[0].el[0].attributes['data-gs-id'].value by name, not index - yay

--- a/demo/two-no-angular.html
+++ b/demo/two-no-angular.html
@@ -141,13 +141,21 @@
                 appendTo: 'body'
             });
 
-//          $('.grid-stack').on('added', function(event, items) {
-//            for (var i = 0; i < items.length; i++) {
-//              console.log('item added');
-//              console.log(items[i]);
-//            }
+          $('.grid-stack').on('added', function(event, items) {
+            for (var i = 0; i < items.length; i++) {
+              console.log('item added');
+              console.log(items[i]);
+            }
           });
-        });
+
+            $('.grid-stack').on('removed', function(event, items) {
+                for (var i = 0; i < items.length; i++) {
+                    console.log('item removed');
+                    console.log(items[i]);
+                    console.log(items[i]._grid.container.context.id);
+                }
+            });
+        })
     </script>
 </body>
 </html>
