--- a/demo/two.html
+++ b/demo/two.html
@@ -19,16 +19,19 @@
             background: lightgreen;
             min-height: 500px;
         }
+
         .grid1 {
             background: #c6ecf1;
             min-height: 500px;
 
         }
+
         .grid2 {
             background: lightpink;
             min-height: 500px;
 
         }
+
         .grid-stack-item-content {
             color: #2c3e50;
             text-align: center;
@@ -37,153 +40,203 @@
     </style>
 </head>
 <body ng-app="GridStack" ng-controller="DemoCtrl">
-    <div class="container-fluid">
-        <h1>gridstack-angular demo</h1>
-        <p>{{widgets0}}</p>
-        <p>{{widgets1}}</p>
-        <div>
-            <a class="btn btn-primary" ng-click="addWidget0()" href="#">Add Widget 0 </a>
-            <a class="btn btn-primary" ng-click="removeWidget0()" href="#">Remove Widget 0 </a>
-            <a class="btn btn-primary" ng-click="moveWidget0()" href="#">Move Widget 0</a>
-        </div>
-        <br>
-        <div class="row">
-            <div class="col-xs-4 col-md-4">
-                <div gridstack class="grid-stack grid-stack-4 grid0" options="options" on-change="onChange(event,items)" on-added="onAdded(event,items)" on-drag-start="onDragStart(event,ui)" on-drag-stop="onDragStop(event,ui)" on-resize-start="onResizeStart(event,ui)" on-resize-stop="onResizeStop(event,ui)">
-                    <div gridstack-item ng-repeat="w in widgets0" class="grid-stack-item" gs-item-x="w.x" gs-item-y="w.y"
-                         gs-item-width="w.width" gs-item-height="w.height" gs-item-autopos="1" on-item-added="onItemAdded(item)" on-item-removed="onItemRemoved(item)">
-                            <div class="grid-stack-item-content">
-                                <a class="btn btn-primary" ng-click="removeWidget0(w)" href="#">{{w.title}}</a>
-                            </div>
+<div class="container-fluid">
+    <h1>gridstack-angular demo</h1>
+    <p>{{widgets[0]}}</p>
+    <p>{{widgets[1]}}</p>
+    <div>
+        <a class="btn btn-primary" ng-click="addWidget(0)" href="#">Add Widget 0 </a>
+        <a class="btn btn-primary" ng-click="removeWidget(0)" href="#">Remove Widget 0 </a>
+        <a class="btn btn-primary" ng-click="moveWidget(0)" href="#">Move Widget 0</a>
+    </div>
+    <br>
+    <div class="row">
+        <div class="col-xs-4 col-md-4">
+            <div gridstack class="grid-stack grid-stack-4 grid0" options="options" on-change="onChange(event,items)"
+                 on-added="onAdded(event,items, 0)" on-removed="onRemoved(event,items, 0)"
+                 on-drag-start="onDragStart(event,ui)" on-drag-stop="onDragStop(event,ui)"
+                 on-resize-start="onResizeStart(event,ui)" on-resize-stop="onResizeStop(event,ui)">
+                <div gridstack-item ng-repeat="w in widgets[0]" class="grid-stack-item" gs-item-id="w.wid" gs-item-x="w.x"
+                     gs-item-y="w.y"
+                     gs-item-width="w.width" gs-item-height="w.height"
+                     on-item-added="onItemAdded(item)" on-item-removed="onItemRemoved(item)">
+                    <div class="grid-stack-item-content">
+                        <a class="btn btn-primary" ng-click="removeWidget0(w, 0)" href="#">{{w.title}}</a>
                     </div>
                 </div>
             </div>
-            <div class="col-xs-4 col-md-4">
-                <div gridstack class="grid-stack grid-stack-4 grid1" options="options" on-change="onChange(event,items)" on-added="onAdded(event,items)"  on-drag-start="onDragStart(event,ui)" on-drag-stop="onDragStop(event,ui)" on-resize-start="onResizeStart(event,ui)" on-resize-stop="onResizeStop(event,ui)">
-                    <div gridstack-item ng-repeat="w in widgets1" class="grid-stack-item" gs-item-x="w.x" gs-item-y="w.y"
-                         gs-item-width="w.width" gs-item-height="w.height" gs-item-autopos="1" on-item-added="onItemAdded(item)" on-item-removed="onItemRemoved(item)">
-                        <div class="grid-stack-item-content">
-                            <a class="btn btn-primary" ng-click="removeWidget0(w)" href="#">{{w.title}}</a>
-                        </div>
+        </div>
+        <div class="col-xs-4 col-md-4">
+            <div gridstack class="grid-stack grid-stack-4 grid1" options="options" on-change="onChange(event,items)"
+                 on-added="onAdded(event,items,1)" on-removed="onRemoved(event,items,1)"
+                 on-drag-start="onDragStart(event,ui)"
+                 on-drag-stop="onDragStop(event,ui)" on-resize-start="onResizeStart(event,ui)"
+                 on-resize-stop="onResizeStop(event,ui)">
+                <div gridstack-item ng-repeat="w in widgets[1]" class="grid-stack-item" gs-item-id="w.wid" gs-item-x="w.x"
+                     gs-item-y="w.y"
+                     gs-item-width="w.width" gs-item-height="w.height"
+                     on-item-added="onItemAdded(item)" on-item-removed="onItemRemoved(item)">
+                    <div class="grid-stack-item-content">
+                        <a class="btn btn-primary" ng-click="removeWidget1(w, 0)" href="#">{{w.title}}</a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+</div>
 
-    <script src="bower_components/jquery/dist/jquery.min.js"></script>
-    <script src="bower_components/jquery-ui/jquery-ui.js"></script>
-    <script src="bower_components/lodash/dist/lodash.min.js"></script>
-    <script src="bower_components/angular/angular.min.js"></script>
-    <script src="lib/gridstack/dist/gridstack.js"></script>
-    <script src="lib/gridstack/dist/gridstack.jQueryUI.js"></script>
-    <script src="../src/gridstack.controller.js"></script>
-    <script src="../src/gridstack.directive.js"></script>
-    <script src="../src/gridstackitem.directive.js"></script>
+<script src="bower_components/jquery/dist/jquery.min.js"></script>
+<script src="bower_components/jquery-ui/jquery-ui.js"></script>
+<script src="bower_components/lodash/dist/lodash.min.js"></script>
+<script src="bower_components/angular/angular.min.js"></script>
+<script src="lib/gridstack/dist/gridstack.js"></script>
+<script src="lib/gridstack/dist/gridstack.jQueryUI.js"></script>
+<script src="../src/gridstack.controller.js"></script>
+<script src="../src/gridstack.directive.js"></script>
+<script src="../src/gridstackitem.directive.js"></script>
 
-    <script type="text/javascript">
-        var app = angular.module('GridStack', ['gridstack-angular']).
-          controller('DemoCtrl', function($scope, $log) {
+<script type="text/javascript">
+    var app = angular.module('GridStack', ['gridstack-angular']).controller('DemoCtrl', function ($scope, $log) {
 
-          var widget_id = 1;
-            $scope.widgets0 = [{ wid: widget_id++, x:0, y:0, width:4, height:1, title: 'one'}, { wid: widget_id++, x:0, y:0, width:4, height:1, title: 'two' }];
-            $scope.widgets1 = [];
+        var widget_id = 1;
+        $scope.widgets = [
+            [
+                {
+                    wid: widget_id++, x: 0, y: 0, width: 4, height: 1, title: 'one'
+                },
+                {
+                    wid: widget_id++, x: 0, y: 0, width: 4, height: 1, title: 'two'
+                }
+            ],
+            []  // empty
+        ];
+
 
 //            $scope.options = {
 //                cellHeight: 200,
 //                verticalMargin: 10
 //            };
 
-          $scope.options = {
+        $scope.options = {
             //animate: true,
+            oneColumnMode: true,
             disableResize: true,
             width: 4,
             cellHeight: 100,
             verticalMargin: 5,
             acceptWidgets: '.grid-stack-item'
-          };
+        };
 
 
-            $scope.addWidget0 = function() {
-                //var newWidget = { x:0, y:0, width:1, height:1 };
-              var newWidget = { wid: widget_id++, x: 0, y: 0, width: 4, height: 1, title: 'Your new task' };
-                $scope.widgets0.push(newWidget);
-            };
+        $scope.addWidget = function (gridNum) {
+            //var newWidget = { x:0, y:0, width:1, height:1 };
+            var newWidget = {wid: widget_id++, x: 0, y: 0, width: 4, height: 1, title: 'Your new task'};
+            $scope.widgets[gridNum].push(newWidget);
+        };
 
-            $scope.moveWidget0 = function() {
-                $scope.widgets0[0].x = 1;
-                $scope.widgets0[0].width = 2;
-                $scope.widgets0[0].height = 2;
-            };
+        $scope.moveWidget = function (gridNum) {
+            $scope.widgets[gridNum][0].x = 1;
+            $scope.widgets[gridNum][0].width = 2;
+            $scope.widgets[gridNum][0].height = 2;
+        };
 
-            $scope.removeWidget0 = function(w) {
-                var index = $scope.widgets0.indexOf(w);
-                $scope.widgets0.splice(index, 1);
-            };
+        $scope.removeWidget = function (w, gridNum) {
+            var index = $scope.widgets[gridNum].indexOf(w);
+            $scope.widgets[gridNum].splice(index, 1);
+        };
 
-            $scope.onChange = function(event, items) {
-                $log.log("onChange event: "+event+" items:"+items);
-                //$log.log(event);
-                //$log.log(items);
-            };
 
-            // DJH
-          $scope.onAdded = function (event, items) {
-            $log.log("onAdded event: " + event + " items:" + items);
-            $log.log(event);
-            $log.log(items);
+        $scope.onChange = function (event, items) {
+            $log.log("onChange event: " + event + " items:" + items);
+            //$log.log(event);
+            //$log.log(items);
+        };
+
+        // DJH
+        $scope.onAdded = function (event, items, gridNum) {
+            $log.log("onAdded event: ",  event , " items:" , items);
+
+            // N.B. dependency on exisitence of _id, better way to do this?
             if (!items[0]._id) {
+                var newItem = angular.copy(items[0]);
+                newItem.title = newItem.el[0].innerText.trim();
 
-              var newItem = angular.copy(items[0]);
-              newItem.title =  newItem.el[0].innerText;
-              // remove widget from DOM
-              var _grid = items[0]._grid;
-              _grid.removeWidget(items[0].el);
+                // remove widget from DOM
+                var _grid = items[0]._grid;
+                _grid.removeWidget(items[0].el);
 
-              // add to angular model
-              console.log('pushing to widgets1');
-              var newWidget = {
-                wid: widget_id++,
-                x: newItem.x,
-                y: newItem.y,
-                height: newItem.height,
-                width: newItem.width,
-                title: newItem.title
-              };
-              $scope.widgets1.push(newWidget);
-
-              // console.log($scope.widgets0);
-              // console.log($scope.widgets1);
+                // add to angular model
+                var newWidget = {
+                    wid: widget_id++,
+                    x: newItem.x,
+                    y: angular.copy(newItem.y),
+                    height: newItem.height,
+                    width: newItem.width,
+                    title: newItem.title
+                };
+                console.log('add to angular model - pushing to widgets:', gridNum, newWidget);
+                if (gridNum == 0) {
+                    $scope.widgets[gridNum].unshift(newWidget);
+                } else {
+                    $scope.widgets[gridNum].unshift(newWidget);
+                }
             }
-          };
+        };
 
-            $scope.onDragStart = function(event, ui) {
-                $log.log("onDragStart event: "+event+" ui:"+ui);
-            };
+        $scope.onRemoved = function (event, items, gridNum) {
+            console.log("onRemoved event: ",  event , " items:" , items);
 
-            $scope.onDragStop = function(event, ui) {
-                $log.log("onDragStop event: "+event+" ui:"+ui);
-            };
+            if (items[0].el[0].attributes['data-gs-id']) {
+                // DJH 7/22/17 - this makes no sense - getting events in grid1
+                // but item is remove from grid0
+                // tested on('removed') from gristack standalone, works as expected
+                // see also console.log(items[0]._grid.container.context.id);
+                var index = _.findIndex($scope.widgets[0], function (item) {
+                    return item.wid == items[0].el[0].attributes['data-gs-id'].value
+                });
+                if (index > -1) {
+                    console.log('remove from angular - wid from widgets[0]: ', index);
+                    $scope.widgets[0].splice(index, 1);
+                }
+                var index = _.findIndex($scope.widgets[1], function (item) {
+                    return item.wid == items[0].el[0].attributes['data-gs-id'].value
+                });
+                if (index > -1) {
+                    console.log('remove from anuglar - from widgets[0]', index);
+                    $scope.widgets[1].splice(index, 1);
+                }
+            }
+        };
 
-            $scope.onResizeStart = function(event, ui) {
-                $log.log("onResizeStart event: "+event+" ui:"+ui);
-            };
 
-            $scope.onResizeStop = function(event, ui) {
-                $log.log("onResizeStop event: "+event+" ui:"+ui);
-            };
+        $scope.onDragStart = function (event, ui) {
+            $log.log("onDragStart event: " + event + " ui:" + ui);
+        };
 
-            $scope.onItemAdded = function(item) {
-                $log.log("onItemAdded item: "+item);
-            };
+        $scope.onDragStop = function (event, ui) {
+            $log.log("onDragStop event: " + event + " ui:" + ui);
+        };
 
-            $scope.onItemRemoved = function(item) {
-                $log.log("onItemRemoved item: "+item);
-                // console.log(item);
-            };
+        $scope.onResizeStart = function (event, ui) {
+            $log.log("onResizeStart event: " + event + " ui:" + ui);
+        };
 
-        });
-    </script>
+        $scope.onResizeStop = function (event, ui) {
+            $log.log("onResizeStop event: " + event + " ui:" + ui);
+        };
+
+        $scope.onItemAdded = function (item) {
+            $log.log("onItemAdded item: " + item);
+        };
+
+        $scope.onItemRemoved = function (item) {
+            console.log("onItemRemoved item: ", item);
+            //item.el[0].attributes[11].id;
+            // console.log(item);
+        };
+
+    });
+</script>
 
 </body>
 </html>
